--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 fastapi==0.104.1
 uvicorn==0.24.0
 websockets==12.0
@@ -10,3 +9,17 @@ python-multipart
 plivo
 motor==3.7.0
 SQLAlchemy==2.0.39
+python-docx==1.2.0
+pypdf==5.6.1
+RapidFuzz==3.13.0
+tiktoken==0.9.0
+pdf2image==1.17.0
+tqdm==4.67.1
+pytesseract==0.3.13
+pandas==2.3.0
+faiss-cpu==1.11.0
+numpy==2.3.1
+openai==1.91.0
+requests==2.32.4
+sentence_transformers==4.1.0
+starlette==0.27.0
